--- a/icode.css
+++ b/icode.css
@@ -1,3 +1,4 @@
+/* Resets */
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +10,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
 }
+/* nav */
 header{
     width: 100%;
     height: 60px;
